--- a/public/styles.css
+++ b/public/styles.css
@@ -32,6 +32,9 @@ img{
 .principal{
     font-family: 'Mouse Memoirs', sans-serif;
     font-size: 20px;
+    margin:1rem;
+    display: flex;
+    justify-content: space-between;
 }
 
 
