--- a/public/styles.css
+++ b/public/styles.css
@@ -103,14 +103,18 @@ margin-top: 1rem;
     flex-wrap: nowrap;
     gap: 20px;
     overflow-x: auto;
+    padding: 3rem;
 }
 
 .card {
     width: 175px;
     font-size: 12px;
-    flex: 0 0 auto;         /* ADD */
-    display: flex;          /* ADD */
-    flex-direction: column; /* ADD */
+    flex: 0 0 auto;         
+    display: flex;          
+    flex-direction: column;
+    align-items: center; 
+    font-family: 'Mouse Memoirs', sans-serif;
+    font-size: 20px;    
 }
 
 .card--image {
