--- a/public/styles.css
+++ b/public/styles.css
@@ -152,3 +152,31 @@ margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
+
+
+.detalles--mascota{
+    font-family: 'Mouse Memoirs', sans-serif;
+    font-size: 25px;    
+    margin: 2rem
+    
+}
+
+.detalles--mascota>label{
+       
+    margin-bottom: 1rem
+    
+}
+
+
+.box_label{
+    max-width: 15rem;
+    background-color: ghostwhite;
+    
+    margin-left: 8rem;
+    text-align: center;
+}
+
+textarea{
+    width: 20rem;
+    height: 15rem;
+}
