--- a/public/styles.css
+++ b/public/styles.css
@@ -181,9 +181,63 @@ textarea{
     height: 15rem;
 }
 
-.box_dueño{
-    height: 300px;
-    width: 300px;
-    background-color: aqua;
+.box_dueño_nombre, .box_dueño_telefono, .box_dueño_correo{
+    height: 250px;
+    width: 250px;
+    background-color: #D9D9D9;
+    color:#0D9490;
+    flex-direction: row;
     text-align: center;
+    padding-top: 5%;
+    border-radius: 10%;
+    font-size: 2rem;
+    
+
+}
+
+#box_dueño-nombre{font-size: 20px;}
+
+#box_dueño-nombre-1{color:black
+}
+
+#box_dueño-user{font-size:40px;}
+
+
+.box_dueño_telefono{
+    background-color: #F6E4C7;
+}
+
+.box_dueño_correo{
+    background-color: #0D9490;
+}
+
+.box_dueño_correo>p{
+    color:#FFFFFF;
+}
+
+
+.datos-contacto-dueño{
+   display: flex;
+   justify-content: space-around;
+}
+
+#datos-de-contacto{
+    color:#377BE2;
+    font-size: 3rem;
+    text-align: center;
+    font-weight: bolder;
+}
+
+.campos-principal{
+    display: flex;
+    
+
+}
+
+.campos{margin-right: 5rem;}
+
+.campos-datos{max-width: 20rem;}
+
+.campos>label{
+    color: #9b9292;
 }
