se agregaron campos a registrar mascota

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 header{
-    background-color:#BCDBF8;
+    background-color:#F19F1F;
     padding: 1rem;
     font-size: 1rem;
  
@@ -11,8 +11,9 @@ header{
 footer{
     display: flex;
     justify-content: space-around;
-    background-color:#BCDBF8;
+    background-color:#363636;
     padding: 1rem;
+    color:white;
 }
 
 img{
@@ -188,12 +189,16 @@ textarea{
     color:#0D9490;
     flex-direction: row;
     text-align: center;
-    padding-top: 5%;
+    padding-top: 3%;
     border-radius: 10%;
     font-size: 2rem;
-    
+    transition: all .2s ease-in-out;
 
 }
+
+
+
+.box_dueño_nombre:hover, .box_dueño_correo:hover, .box_dueño_telefono:hover{transform:scale(1.1);}
 
 #box_dueño-nombre{font-size: 20px;}
 
@@ -228,7 +233,7 @@ textarea{
     font-weight: bolder;
 }
 
-.campos-principal{
+.campos-izquierda{
     display: flex;
     
 
@@ -240,4 +245,15 @@ textarea{
 
 .campos>label{
     color: #9b9292;
+}
+
+.detalles--mascota--imagen{
+    width: 400px;
+    height: 400px;
+}
+
+
+.campos--izquierda--derecha{
+    display: flex;
+    justify-content: space-between;
 }
