se agrego validacion de form a registrar mascota

--- a/public/styles.css
+++ b/public/styles.css
@@ -257,3 +257,14 @@ textarea{
     display: flex;
     justify-content: space-between;
 }
+
+
+.detalles--mascota--nombre{
+   position: center;
+}
+
+
+input.invalid{
+    border-color: #900;
+    background-color: #FDD;
+  }
