--- a/public/styles.css
+++ b/public/styles.css
@@ -92,13 +92,14 @@ margin-top: 1rem;
     height: 5rem;
 }
 
-
+.mascota-list-item{
+    
+    margin: 4rem;
+}
 
 .busqueda--mascota--campos{
     font-family: 'Mouse Memoirs', sans-serif;
-   
     padding:1rem;
-   
     display: flex;
     justify-content: space-evenly;
 }
@@ -126,10 +127,9 @@ margin-top: 1rem;
 
 .cards-list {
     display: flex;
-    flex-wrap: nowrap;
-    gap: 20px;
-    overflow-x: auto;
-    padding: 3rem;
+    flex-wrap: wrap;
+    justify-content:center;
+    
 }
 
 
