--- a/public/styles.css
+++ b/public/styles.css
@@ -92,10 +92,7 @@ margin-top: 1rem;
     height: 5rem;
 }
 
-.mascota-list-item{
-    
-    margin: 1rem;
-}
+
 
 .busqueda--mascota--campos{
     font-family: 'Mouse Memoirs', sans-serif;
@@ -126,7 +123,7 @@ margin-top: 1rem;
 }
 
 .cards-list {
-    border: 10px solid #F9F871;
+    border: 4px solid #F9F871;
     max-width: 1500px;
     margin: 0 auto;
     width: 90%;
@@ -134,22 +131,78 @@ margin-top: 1rem;
 }
 
 .cards-list-flex {
-
-
     display: flex;
     flex-direction: row;
      flex-wrap: wrap; 
      justify-content: center;
+ 
+}
 
-     
+
+.mascota-list-item{
+    margin: 1rem;
     
+  
+}
+
+@media (max-width: 675px) {
+    .cards-list-flex {
+        flex-direction: row;
+    }
+    header{background-color: red;}
+    
+    .mascota-list-item {
+        width:65%;
+        min-width: 200px;
+        margin-left: 1
+    }
+
+    .registrarMascotaCampos{
+        
+        flex-direction: column;
+        margin: 0 auto;
+    }
+
+    input, select, .text-area{ width: 90%;
+        }
+
+        .btn-registrar-mascota{
+        margin-left: 30%;
+        }
+   
+}
+
+@media (min-width: 675px) {
+    .cards-list-flex {
+        flex-direction: row;
+    }
+    header{background-color: green;}
+    
+    .mascota-list-item {
+        width:45%;
+      
+    }
+   
+}
+
+@media (min-width: 1073px) {
+    .cards-list-flex {
+        flex-direction: row;
+    }
+    header{background-color: yellow;}
+    
+    .mascota-list-item {
+        width:25%;
+    }
+   
 }
 
 
 
 
 
-/* ADD */
+
+/* 1073 */
 .img-responsive {
     display: block;
     max-width: 100%;
