--- a/public/styles.css
+++ b/public/styles.css
@@ -32,13 +32,7 @@ img{
     
 }
 
-.principal{
-    font-family: 'Mouse Memoirs', sans-serif;
-    font-size: 20px;
-    margin:1rem;
-    display: flex;
-    justify-content: space-between;
-}
+
 
 
 h1{
@@ -149,7 +143,7 @@ margin-top: 1rem;
     .cards-list-flex {
         flex-direction: row;
     }
-    header{background-color: red;}
+    header{background-color: rgb(228, 228, 222);}
     
     .mascota-list-item {
         width:65%;
@@ -176,7 +170,7 @@ margin-top: 1rem;
     .cards-list-flex {
         flex-direction: row;
     }
-    header{background-color: green;}
+    header{background-color: rgb(228, 228, 222);}
     
     .mascota-list-item {
         width:45%;
@@ -189,7 +183,7 @@ margin-top: 1rem;
     .cards-list-flex {
         flex-direction: row;
     }
-    header{background-color: yellow;}
+    header{background-color: rgb(228, 228, 222);}
     
     .mascota-list-item {
         width:25%;
@@ -405,6 +399,10 @@ textarea{
 .detalles--mascota--imagen{
     width: 400px;
     height: 400px;
+    overflow: hidden;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 
@@ -485,3 +483,69 @@ input.invalid{
 }
 
 .buscar--mascota>p{color:grey}
+
+
+.carousel-item-img{
+    
+    width: 500px;
+    height: 500px;
+    
+}
+
+.link-registrar-mascota{
+    border-color: #F19F1F;
+    
+    
+}
+
+.carousel-caption{
+    background-color: #108996b0;
+    left: 0;
+    border-radius:5rem;
+   
+  }
+
+.carousel-caption>h3, .slider-control>h3
+{
+    color:#ffffff;
+    font-size: 3rem;
+    font-weight:bold;
+    
+    
+}
+
+.carousel-caption>p, .slider-control>p
+{
+    color:#ffffff;
+    font-size:1.5rem;
+    font-weight: bold;
+    
+}
+
+.btn--registrar--mascota{
+    background-color: #0D9490;
+
+}
+
+.cards-home{
+    padding: 3rem;
+}
+
+.cards-home>h1, p{
+    text-align: center;
+}
+
+.cards-home>p{
+    color:#757373
+}
+ 
+
+.card>img{
+    width: auto;
+    height: auto;
+    
+}
+
+
+
+
